
[TestTablePresenter/no_color - 1]
NAME       INSTALLED  FIXED-IN          TYPE  VULNERABILITY  SEVERITY  LOCATION                
package-1  1.1.1      the-next-version  rpm   CVE-1999-0001  [0;0mLow[0m                                
package-2  2.2.2                        deb   CVE-1999-0002  [0;0mCritical[0m                           
package-3  3.3.3                        npm   CVE-1999-0003  [0;0mHigh[0m      /foo/bar/somefile-3.txt  

---

[TestTablePresenter/with_color - 1]
NAME       INSTALLED  FIXED-IN          TYPE  VULNERABILITY  SEVERITY  LOCATION                
package-1  1.1.1      the-next-version  rpm   CVE-1999-0001  [0;0mLow[0m                                
package-2  2.2.2                        deb   CVE-1999-0002  [0;0mCritical[0m                           
package-3  3.3.3                        npm   CVE-1999-0003  [0;0mHigh[0m      /foo/bar/somefile-3.txt  
NAME       INSTALLED  FIXED-IN          TYPE  VULNERABILITY  SEVERITY  LOCATION                
package-1  1.1.1      the-next-version  rpm   CVE-1999-0001  Low                                
package-2  2.2.2                        deb   CVE-1999-0002  Critical                           
package-3  3.3.3                        npm   CVE-1999-0003  High      /foo/bar/somefile-3.txt  

---

[TestEmptyTablePresenter - 1]
No vulnerabilities found

---

[TestHidesIgnoredMatches - 1]
NAME       INSTALLED  FIXED-IN          TYPE  VULNERABILITY  SEVERITY  LOCATION                
package-1  1.1.1      the-next-version  rpm   CVE-1999-0001  Low                                
package-2  2.2.2                        deb   CVE-1999-0002  Critical                           
package-3  3.3.3                        npm   CVE-1999-0003  High      /foo/bar/somefile-3.txt  

---

[TestDisplaysIgnoredMatches - 1]
NAME       INSTALLED  FIXED-IN          TYPE  VULNERABILITY  SEVERITY                      LOCATION                
package-1  1.1.1      the-next-version  rpm   CVE-1999-0001  Low                                                    
package-2  2.2.2                        deb   CVE-1999-0002  Critical                                               
package-2  2.2.2                        deb   CVE-1999-0004  Critical (suppressed by VEX)                           
package-2  2.2.2                        deb   CVE-1999-0002  Critical (suppressed)                                  
package-2  2.2.2                        deb   CVE-1999-0001  Low (suppressed)                                       
package-3  3.3.3                        npm   CVE-1999-0003  High                          /foo/bar/somefile-3.txt  

---
